test/files/neg/t5358.check
t5358.scala:3: error: class C inherits conflicting members:
  def hi: String (defined in trait A) and
  def hi: String (defined in trait B)
  (note: this can be resolved by declaring an `override` in class C.)
class C extends A with B
      ^
one error found
